Fixed the white space

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -440,8 +440,8 @@ a {
 }
 .productInformation .stats .actions {
   display: flex;
-  justify-content: space-around;
   align-items: center;
+  justify-content: center;
   flex-direction: row;
   margin-top: 1em;
 }
@@ -456,6 +456,7 @@ a {
 }
 .productInformation .stats .actions .delete {
   background: #e74c3c;
+  margin-left: 1.5em;
 }
 .productInformation .stats .actions .delete:hover {
   background: #e43725;
